feat: 添加用户组删除函数
