# docs/swagger.yaml
@@ -245,6 +245,24 @@ paths:
       summary: 删除分类
       tags:
       - 分类
+  /admin/delete/group:
+    post:
+      parameters:
+      - description: 用户组id
+        in: formData
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/service.GeneralJSONHeader'
+      summary: 删除用户组
+      tags:
+      - 用户
   /admin/delete/tag:
     post:
       parameters:
