# service/api.go
@@ -719,8 +719,43 @@ func (_ *Delete) DeleteCategory(ctx *gin.Context) { // 删除分类函数
 	})
 }
 
+// DeleteGroup @Title 用户
+// @Tags 用户
+// @Summary	删除用户组
+// @Produce	json
+// @Param id formData string true "用户组id"
+// @Success 200 {object} GeneralJSONHeader "OK"
+// @Router		/admin/delete/group [POST]
 func (_ *Delete) DeleteGroup(ctx *gin.Context) { // 删除用户组函数
-	ctx.JSON(http.StatusOK, gin.H{})
+	gid, err := primitive.ObjectIDFromHex(ctx.PostForm("id"))
+	if err != nil {
+		ctx.JSON(http.StatusOK, GeneralJSONHeader{
+			Code: ServerError,
+			Msg:  "server error",
+			Path: ctx.Request.URL.Path,
+			Data: nil,
+		})
+		return
+	}
+	filter := bson.D{{Key: "_id", Value: gid}}
+	err = DataBase.DeleteOneDB("group", filter)
+	if err != nil {
+		ctx.JSON(http.StatusOK, GeneralJSONHeader{
+			Code: ServerError,
+			Msg:  "server error",
+			Path: ctx.Request.URL.Path,
+			Data: nil,
+		})
+		return
+	}
+	ctx.JSON(http.StatusOK, GeneralJSONHeader{
+		Code: SuccessCode,
+		Msg:  "success",
+		Path: ctx.Request.URL.Path,
+		Data: gin.H{
+			"id": gid,
+		},
+	})
 }
 
 func (_ *Delete) DeleteUser(ctx *gin.Context) { // 删除用户函数
